--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,10 @@
 buildscript {
     ext {
-        compose_ui_version = '1.3.0'
+        compose_ui_version = '1.3.1'
         dagger_version = '2.44'
         lifecycle_version = '2.5.1'
         coroutines_version = '1.6.4'
+        core_testing = '2.1.0'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
