--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     ext {
-        compose_ui_version = '1.3.1'
+        compose_ui_version = '1.3.2'
+        compose_material = '1.3.1'
         dagger_version = '2.44'
         lifecycle_version = '2.5.1'
         coroutines_version = '1.6.4'
