--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,7 +27,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.krishnanand.clickrow.ClickRowTestRunner"
         vectorDrawables {
             useSupportLibrary true
         }
@@ -106,6 +106,7 @@ dependencies {
     androidTestImplementation "androidx.arch.core:core-testing:$core_testing"
     // androidTestImplementation "io.mockk:mockk-android:$mockk"
     androidTestImplementation 'io.mockk:mockk-android:1.13.3'
+    kaptAndroidTest "com.google.dagger:dagger-compiler:$dagger_version"
 
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
